<resources>
    <string name="app_name">Gestion Cobranza</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_clientes">Clientes</string>
    <string name="title_productos">Productos</string>
    <string name="title_rutas">Rutas</string>
    <string name="title_facturas">Facturas</string>
    <string name="title_jornadas">Cobros</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="nav_header_desc">Nombre usurio</string>
    <string name="nav_header_title">Email</string>
    <string name="nav_header_subtitle">Name</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_sicronizar">Sincronizar data</string>
    <string name="list_item_load_more">MÁS</string>
    <string name="msj_vacio">No hay datos para mostrar.</string>
    <string name="label_cedula">Cédula</string>
    <string name="label_telefono">Teléfono</string>
</resources>
